Added Metadata to main heading

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,7 @@
 banner:
   en:
-    title: On Demand Training
+    title: Portfolio
     url: /
-  es:
-    title: Aprende a tu ritmo
-    url: /es/
 
 main:
   en:
