--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
-title: On Demand Training
+title: Portfolio
+variable: everything
 timezone: UTC
 collections:
   posts:
@@ -16,39 +17,39 @@ defaults:
     path: ''
   values:
     lang: en
-domain: services.github.com
-author: GitHub, Inc.
-email: services@github.com
+domain:
+author:
+email:
 locale: en-US
 title_separator: "-"
-name: GitHub, Inc.
-description: You're in control. We're with you along the way.
-baseurl: 
-gh_repo: 
-teaser: 
+name:
+description:
+baseurl:
+gh_repo:
+teaser:
 breadcrumbs: true
 words_per_minute: 200
 comments:
-  provider: 
+  provider:
   disqus:
-    shortname: 
+    shortname:
   discourse:
-    server: 
+    server:
   facebook:
-    appid: 
-    num_posts: 
-    colorscheme: 
+    appid:
+    num_posts:
+    colorscheme:
 analytics:
-  provider: google
+  provider:
   google:
-    tracking_id: UA-3769691-2
+    tracking_id:
 markdown_ext: markdown,mkdown,mkdn,mkd,md
 markdown: kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
-parentsite: https://services.github.com
+parentsite:
 permalink: "/articles/:title/"
 plugins:
 - jekyll-paginate
